# hello-uniffi

./: .gitignore  Cargo.toml  LOGGING_ADDED.md  Makefile  README.md  RESTRUCTURING_COMPLETE.md  binding_generation.md
ios/: INTEGRATION_GUIDE.md  README.md  build.sh  configure_xcode.sh  test_integration.sh  test_logging.swift
ios/WeightliftingApp/Shared/: .gitignore  weightlifting_core.swift  weightlifting_coreFFI.h  weightlifting_coreFFI.modulemap
ios/WeightliftingApp/WeightliftingApp/: ContentView.swift  WeightliftingApp-Bridging-Header.h  WeightliftingAppApp.swift
ios/WeightliftingApp/WeightliftingApp.xcodeproj/: project.pbxproj
ios/WeightliftingApp/WeightliftingApp.xcodeproj/project.xcworkspace/xcuserdata/rossharrison.xcuserdatad/: UserInterfaceState.xcuserstate
ios/WeightliftingApp/WeightliftingApp.xcodeproj/xcshareddata/xcschemes/: WeightliftingApp.xcscheme
ios/WeightliftingApp/WeightliftingApp.xcodeproj/xcuserdata/rossharrison.xcuserdatad/xcschemes/: WeightliftingAppSim.xcscheme  xcschememanagement.plist
ios/WeightliftingApp/WeightliftingAppTests/: WeightliftingAppTests.swift
ios/WeightliftingApp/WeightliftingAppUITests/: WeightliftingAppUITests.swift  WeightliftingAppUITestsLaunchTests.swift
shared/: .gitignore  Cargo.toml  Makefile  SUMMARY.md  build.rs  build.sh
shared/src/: error.rs  lib.rs  models.rs  repository.rs  weightlifting_core.udl
src/: error.rs  lib.rs  models.rs  repository.rs  weightlifting_core.udl
