[package]
name = "weightlifting_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "weightlifting_core"

[dependencies]
uniffi = { version = "0.25", features = ["cli"] }
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
log = "0.4"
env_logger = "0.11"

[build-dependencies]
uniffi = { version = "0.25", features = ["build"] }

[dev-dependencies]
tempfile = "3.0"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"



